--- a/README.Rmd
+++ b/README.Rmd
@@ -430,7 +430,7 @@ difs = colMeans(data.frame(cbind(baja=it_pars_bh, alta=it_pars_ah)))
 diferencia = difs[1] - difs[2]
 ```
 
-Si restamos `r diferencia` a los parámetros obtenidos por el grupo de alta habilidad obtenemos parámetros similares (no iguales) a los parámetros de la escala del grupo de baja habilidad. 
+Si sumamos `r diferencia` a los parámetros obtenidos por el grupo de alta habilidad obtenemos parámetros similares (no iguales) a los parámetros de la escala del grupo de baja habilidad. 
 
 
 ```{r}
